# Tuya-Teralux-App

./: .gitignore  .gitmodules  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CONTRIBUTING_AGENTS.md  Makefile  OPTIMIZATIONS.md  README.md  REVISION.md  UI_IMPROVEMENTS_SUMMARY.md  notification  package-lock.json  package.json  snapshot.json
.agents/: README.md  api-contract-guide.md  (+3 more)
backend/services/rag-whisper-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/services/rag-whisper-service/proto/: whisper.proto
backend/services/rag-whisper-service/src/modules/rag/application/: __init__.py  ingest_service.py  prompts.py  query_service.py  service.py  summarize_service.py  translate_service.py
backend/services/rag-whisper-service/src/modules/rag/domain/: __init__.py  aggregates.py  events.py  repositories.py
backend/services/rag-whisper-service/src/modules/rag/infrastructure/: embedding_factory.py  factory.py
backend/services/rag-whisper-service/src/modules/shared/config/: models.yaml
backend/services/rag-whisper-service/src/modules/shared/infrastructure/: auth.py  registry.py  settings.py
backend/services/rag-whisper-service/src/modules/whisper/application/: service.py
backend/services/rag-whisper-service/src/modules/whisper/controllers/: __init__.py
backend/services/rag-whisper-service/src/modules/whisper/domain/: __init__.py
backend/services/rag-whisper-service/src/modules/whisper/dtos/: __init__.py
backend/services/rag-whisper-service/src/modules/whisper/infrastructure/: factory.py
(+1599 files in other folders)
